--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
   <body>
     <%= render "layouts/header" %>
     <div class="container mx-auto">
+      <% flash.each do |message_type, message| %>
+        <%= message %>
+      <% end %>
       <%= yield %>
     </div>
     <%= render "layouts/footer" %>
