--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,10 +9,10 @@
     <div class="items-center justify-between w-full md:flex md:w-auto md:order-1" id="navbar-user">
       <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 md:flex-row md:mt-0 md:border-0 md:bg-white">
         <li>
-          <%= link_to t(".home"), "#", class: "block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0"%>
+          <%= link_to t(".home"), root_path, class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0"%>
         </li>
         <li>
-          <%= link_to t(".posts"), "#", class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0"%>
+          <%= link_to t(".posts"), posts_path, class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0"%>
         </li>
         <li>
           <%= link_to t(".users"), "#", class: "block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0"%>
@@ -22,9 +22,11 @@
     <div class="flex items-center md:order-2 space-x-3 md:space-x-0">
       <% if logged_in? %>
         <img class="w-10 h-10 rounded-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_kSSoomJ9hiFXmiF2RdZlwx72Y23XsT6iwQ&s" alt="user photo">
-        <%= @current_user.email %>
-        <span class="px-2">|</span>
-        <%= link_to t(".logout"), logout_path, data: {"turbo-method": :delete} %>
+        <%= link_to user_path @current_user do %>
+          <%= @current_user.email %>
+          <span class="px-2">|</span>
+          <%= link_to t(".logout"), logout_path, data: {"turbo-method": :delete} %>
+        <% end %>
       <% else %>
         <div>
           <%= link_to t(".signup"), sign_up_path %>
