--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,10 @@
   </div>
   <div class="w-8/12">
     <%= render @posts %>
+    <% if @posts.any? %>
+      <div class="text-center mt-4">
+        <%== pagy_nav @pagy %>
+      </div>
+    <% end %>
   </div>
 </div>
