--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, t(".title") %>
 <div class="flex gap-x-12">
   <div class="w-3/12">
-    <%= render partial: "shared/user_info", locals: {user: @user} %>
+    <%= render partial: "shared/stats" %>
   </div>
   <div class="w-8/12">
     <%= render @posts %>
