--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,7 +2,7 @@
   <h5 class="mb-5 text-2xl font-semibold tracking-tight text-gray-900">
     <%= post.title %>
   </h5>
-  <div class="flex gap-x-5 mb-5">
+  <div class="flex items-center gap-x-5 mb-5">
     <span class="text-gray-400 font-medium">
       <i class="fa-regular fa-user"></i>
       <%= post.user.name %>
@@ -10,6 +10,17 @@
     <span class="text-gray-400 font-medium">
       <i class="fa-regular fa-calendar"></i>
       <%= time_ago_in_words post.created_at %>
+    </span>
+    <span class="px-2 py-1 rounded-lg text-gray-700 font-medium text-sm border border-gray-300">
+      <% if post.public_status? %>
+        <span>
+          <i class="fa-solid fa-earth-americas me-1"></i>
+          <%= t ".status.public" %>
+        </span>
+      <% else %>
+        <i class="fa-solid fa-lock me-1"></i>
+        <%= t ".status.private" %>
+      <% end %>
     </span>
   </div>
   <p class="mb-3 text-lg">
@@ -19,23 +30,23 @@
     <div class="flex gap-x-2">
       <%= render partial: "posts/like_button", locals: {post:} %>
       <% if current_user? post.user %>
-        <%= link_to edit_post_path(post), class: "py-1 px-2 text-sm cursor-pointer font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-yellow-400" do %>
-          <i class="fa-solid fa-pen"></i>
-          <span><%= t(".edit") %></span>
+        <%= link_to edit_post_path(post), class: "py-1 px-2 text-sm cursor-pointer font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100" do %>
+          <i class="fa-solid fa-pen text-yellow-500"></i>
+          <span class="ml-2"><%= t(".edit") %></span>
         <% end %>
         <%=
           link_to post,
           data: {"turbo-method": :delete, "turbo-confirm": t(".confirm_delete")},
-          class: "py-1 px-2 text-sm cursor-pointer font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-yellow-400" do
+          class: "py-1 px-2 text-sm cursor-pointer font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100" do
         %>
-          <i class="fa-solid fa-pen"></i>
-          <span><%= t(".delete") %></span>
-        <% end %>
+        <i class="fa-solid fa-trash text-red-500"></i>
+        <span class="ml-2"><%= t(".delete") %></span>
       <% end %>
-    </div>
-    <span>
-      <%= link_to t(".read_more"), "#", class: "text-blue-500 font-medium" %>
-      <i class="fa-solid fa-arrow-right text-blue-500"></i>
-    </span>
+    <% end %>
   </div>
+  <span>
+    <%= link_to t(".read_more"), "#", class: "text-blue-500 font-medium" %>
+    <i class="fa-solid fa-arrow-right text-blue-500"></i>
+  </span>
+</div>
 </div>
