--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,15 @@
 <% provide :title, t(".title") %>
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="flex flex-col justify-center w-2/5 h-64 mx-auto">
+  <%= link_to export_posts_path(format: :xlsx), class: "bg-white border border-2 border-green-700 text-gray-800 hover:text-green-900 hover:bg-green-700 hover:text-white font-medium rounded text-sm px-5 py-2.5 text-center mb-5" do %>
+    <i class="fa-solid fa-download me-2"></i>
+    <%= t(".export_post") %>
+  <% end %>
+  <div>
+    <%= form_with url: import_posts_path, local: true, multipart: true do |f| %>
+      <div class="flex gap-x-5">
+        <%= f.file_field :file, class: "block w-full text-gray-400 font-semibold text-sm bg-white border file:cursor-pointer focus:outline-none cursor-pointer file:border-0 file:py-3 file:px-4 file:mr-4 file:bg-gray-100 file:hover:bg-gray-200 file:text-gray-500 rounded" %>
+        <%= f.submit t(".submit"), class: "text-white bg-blue-700 hover:bg-blue-800 cursor-pointer font-medium rounded text-sm w-full sm:w-auto px-5 py-2.5 text-center" %>
+      </div>
+    <% end %>
+  </div>
+</div>
