--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,13 @@
     <%= render "layouts/header" %>
     <div class="container mx-auto">
       <% flash.each do |message_type, message| %>
+      <div class="alert-<%= message_type %>  border-l-4 p-4" role="alert">
         <%= message %>
+      </div>
       <% end %>
-      <%= yield %>
+      <div class="mt-3">
+        <%= yield %>
+      </div>
     </div>
     <%= render "layouts/footer" %>
   </body>
