--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,14 @@
 <% provide :title, t(".title") %>
 <div class="flex flex-col mx-auto w-3/5 mt-2 divide-y divide-gray-200">
+  <%= render "search_form" %>
   <% if @users.any? %>
     <%= render @users %>
     <div class="text-center pt-5">
       <%== pagy_nav @pagy if @pagy.pages > 1 %>
+    </div>
+  <% else %>
+    <div class="mt-5">
+      <%= render partial: "shared/empty_message", locals: {message: t(".empty_list")} %>
     </div>
   <% end %>
 </div>
